--- a/asdcouch/asdcouch/couchapp.rc
+++ b/asdcouch/asdcouch/couchapp.rc
@@ -2,6 +2,9 @@
   "env": {
     "local": {
       "db": "http://127.0.0.1:5984/asdproject"
+    },
+      "cloudant": {
+      "db": "https://burnmovassiaelfirstlyins:jUN1BWwILikH0oBNmyp2e8Oj/fsodannis.cloudant.com/asdproject"
     }
   }
 }
